--- a/teve.html
+++ b/teve.html
@@ -3,14 +3,16 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Romhányi József</title>
+	<link rel="stylesheet" href="/teve.css">
 </head>
 <body>
-<div>
-<h1>Romhányi József*</h1>
-
+<div id="vers">
+<h1>Romhányi József<sup><a href="#romhanyi">*</a></sup></h1>
+<hr>
 <p>„Romhányi, a rímhányó” – nem hiába kapta ezt a jelzőt Romhányi József író, költő, akinek többek között a Mézga család, a Dr. Bubó, vagy a Frédi és Béni pazar szövegeit is köszönhetjük. Gyerekek ezrei nőttek fel állatversein, melyek közül most a teve fohászát elevenítjük fel.</p>
 
 <h2>A teve fohásza.</h2>
+<img class="tevekep" src="/teve.png" alt="Teve" title="Teve">
 <p>Monoton<br />
 üget a süppedô homokon<br /> 
 a sivatag lova,<br />
@@ -33,34 +35,35 @@ Az itató tava távol,<br />
 s oly rettentô messze még az oázis.<br /> 
 Erre utal az alábbi fohász is:</p>
 
-<p>- Tevék ura!<br />
-Te tevél tevévé engem eleve,<br />
-Teveled nem ér fel tevefej tétova veleje.<br />
-Te terved veté a tevevedelô tavat tavaly távol,<br /> 
-de tévednél, vélvén,<br />
-vén híved neved feledve<br />
-elvetemedve<br />
-vádol.<br />
-Nem! Vidd te tevelelkem hovatovább tova,<br />
-mivel levet - vert vederbe<br />
-feltekerve - nem vedelve<br />
-lett betelve<br />
-a te tevéd szenvedelme.<br />
-Te nevedbe<br />
-legyen eme<br />
-neveletlen tevetetem<br />
-eltemetve!</p>
+	<p id="fohasz">- Tevék ura!<br />
+	Te tevél tevévé engem eleve,<br />
+	Teveled nem ér fel tevefej tétova veleje.<br />
+	Te terved veté a tevevedelô tavat tavaly távol,<br />
+	de tévednél, vélvén,<br />
+	vén híved neved feledve<br />
+	elvetemedve<br />
+	vádol.<br />
+	Nem! Vidd te tevelelkem hovatovább tova,<br />
+	mivel levet - vert vederbe<br />
+	feltekerve - nem vedelve<br />
+	lett betelve<br />
+	a te tevéd szenvedelme.<br />
+	Te nevedbe<br />
+	legyen eme<br />
+	neveletlen tevetetem<br />
+	eltemetve!</p>
+
 
 <p>S evezzevel ava teve<br />
 levelkévét kivilevelhevelteve.</p>
-<p>*Született: 1921. március 8. (Nagytétény) - Elhunyt: 1983. május 7. (Budapest)</p>
-<p>http://www.hirlevelplusz.hu/teve-fohasza-ime-egy-bizonyitek-hogy-romhanyi-jozsef-egy-zseni-volt-video/</p>
+<p id="romhanyi"><sup>*</sup>Született: 1921. március 8. (Nagytétény) - Elhunyt: 1983. május 7. (Budapest)</p>
+<p id="jobbra"> <a href="http://www.hirlevelplusz.hu/teve-fohasza-ime-egy-bizonyitek-hogy-romhanyi-jozsef-egy-zseni-volt-video/" target="_blank">Forrás</a> </p>
 
-
+<hr>
 <h2>Fejtörő</h2>
 
 <p>Egy oázisban tevék és struccok mászkálnak. Összesen 24 fejük és 58 lábuk van. Hány teve és hány strucc van az oázisban?</p>
-
+<img class="tevekep" id="oazis" src="/oazis.png" alt="Oázis" title="Oázis">
 <p>Teve: </p>
 <p>Strucc: </p>
 
