Camel html finished, css finished, javascript start.

--- a/teve.html
+++ b/teve.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8" />
 	<title>Romhányi József</title>
 	<link rel="stylesheet" href="/teve.css">
+	<script src="/teve.js"></script>
 </head>
 <body>
 <div id="vers">
@@ -64,9 +65,13 @@ levelkévét kivilevelhevelteve.</p>
 
 <p>Egy oázisban tevék és struccok mászkálnak. Összesen 24 fejük és 58 lábuk van. Hány teve és hány strucc van az oázisban?</p>
 <img class="tevekep" id="oazis" src="/oazis.png" alt="Oázis" title="Oázis">
+<form>
 <p>Teve: </p>
+<input type="number" name="teve" value="teve">
 <p>Strucc: </p>
+<input type="number" name="strucc" value="strucc">
 
+</form>
 </div>
 </body>
 </html>
