Camel html finished, css finished, javascript finished

--- a/teve.html
+++ b/teve.html
@@ -65,13 +65,13 @@ levelkévét kivilevelhevelteve.</p>
 
 <p>Egy oázisban tevék és struccok mászkálnak. Összesen 24 fejük és 58 lábuk van. Hány teve és hány strucc van az oázisban?</p>
 <img class="tevekep" id="oazis" src="/oazis.png" alt="Oázis" title="Oázis">
-<form>
-<p>Teve: </p>
-<input type="number" name="teve" value="teve">
-<p>Strucc: </p>
-<input type="number" name="strucc" value="strucc">
+<form name="form1">
+<p>Teve: <input type="number" name="teve1" value="teve"> </p>
+<p>Strucc: <input type="number" name="strucc1" value="strucc"> </p>
+<input onclick="tipp()" type="button" value="Tipp"><span id="eredmeny"></span>
 
 </form>
+
 </div>
 </body>
 </html>
