Camel html finished, css finished, javascript finished

--- a/teve.html
+++ b/teve.html
@@ -68,7 +68,7 @@ levelkévét kivilevelhevelteve.</p>
 <form name="form1">
 <p>Teve: <input type="number" name="teve1" value="teve"> </p>
 <p>Strucc: <input type="number" name="strucc1" value="strucc"> </p>
-<input onclick="tipp()" type="button" value="Tipp"><span id="eredmeny"></span>
+<input onclick="tipp()" type="button" value="Tipp"><span id="eredmeny" class="eredmeny1"></span>
 
 </form>
 
